<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.AuthorizationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/startingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nicknameTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/yellow">

                <AutoCompleteTextView
                    android:id="@+id/nicknameTv"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/nickname"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/main_text_color" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobileNumberTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/yellow">

                <AutoCompleteTextView
                    android:id="@+id/mobileNumberTv"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/main_text_color" />

            </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sendMessageBtn"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text="@string/send_sms"
                    android:textColor="@color/black" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/codeTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColorHint="@color/yellow">

                <AutoCompleteTextView
                    android:id="@+id/codeTv"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/main_text_color" />

            </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/checkBtn"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text="@string/check"
                    android:textColor="@color/black" />



                <Button
                    android:id="@+id/resetBtn"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rectangle"
                    android:gravity="center"
                    android:text="@string/reset"
                    android:textColor="@color/black" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>